feat: add tracks
